--- a/alignment-GPT-only.ipynb
+++ b/alignment-GPT-only.ipynb
@@ -20,8 +20,7 @@
     "from sklearn.metrics.pairwise import cosine_similarity\n",
     "\n",
     "import openai\n",
-    "openai.api_key = \"INSERT HERE\"\n",
-    "\n"
+    "# openai.api_key = \"INSERT HERE\"\n"
    ]
   },
   {
@@ -542,7 +541,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.13"
+   "version": "3.11.6"
   }
  },
  "nbformat": 4,
