updating from visual studio code

--- a/align-embeddings-GPT-BERT-W2V-Mar20.ipynb
+++ b/align-embeddings-GPT-BERT-W2V-Mar20.ipynb
@@ -5,33 +5,51 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Required environment setup\n",
+    "# Required environment setup\n",
     "\n",
-    "For Local:\n",
+    "## For Local:\n",
+    "\n",
+    "Deactivate the virtual environment if it is active\n",
+    "`deactivate`\n",
+    "\n",
+    "Remove the existing virtual environment directory\n",
+    "`rm -rf .venv`\n",
+    "\n",
+    "Install Python 3.12.3 using Homebrew (if not already installed)\n",
+    "`brew install python@3.12`\n",
+    "\n",
+    "Verify the installation\n",
+    "`python3.12 --version`\n",
+    "\n",
+    "Create and activate the new virtual environment\n",
     "```\n",
-    "conda create -n gpt-bert-align python=3.10\n",
-    "conda activate gpt-bert-align\n",
+    "python3.12 -m venv .venv\n",
+    "source .venv/bin/activate\n",
+    "```\n",
     "\n",
-    "cat > requirements.txt <<EOL\n",
-    "jupyter\n",
-    "ipykernel\n",
-    "ipywidgets\n",
-    "openai\n",
-    "torch\n",
-    "transformers\n",
-    "sentence-transformers\n",
-    "scikit-learn\n",
-    "nltk\n",
+    "Create or update your requirements.txt file with the necessary packages\n",
+    "```\n",
     "gensim\n",
-    "matplotlib\n",
-    "plotly\n",
+    "numpy\n",
+    "openai\n",
     "pandas\n",
-    "EOL\n",
-    "\n",
-    "pip install -r requirements.txt\n",
+    "scikit-learn\n",
+    "scipy==1.12.0 # must use 1.12.0 because 1.13 and above is not compatible with current version of gensim (4.3.2)\n",
+    "torch\n",
+    "tqdm\n",
+    "transformers\n",
     "```\n",
     "\n",
-    "For Sol:\n",
+    "Install the required packages\n",
+    "`pip install -r requirements.txt`\n",
+    "\n",
+    "(Optional) Install Jupyter and set up the IPython kernel (setting up Ipython kernel might be unnecessary)\n",
+    "```\n",
+    "pip install jupyter\n",
+    "python -m ipykernel install --user --name=.venv --display-name \"Python (.venv)\"\n",
+    "```\n",
+    "\n",
+    "## For Sol:\n",
     "```\n",
     "module load mamba/latest\n",
     "mamba create -n gpt-bert-align python=3.10\n",
@@ -39,7 +57,7 @@
     "cat > requirements.txt\n",
     "pip install -r requirements.txt\n",
     "mkjupy gpt-bert-align\n",
-    "```\n"
+    "```"
    ]
   },
   {
