--- a/alignment-W2V-only.ipynb
+++ b/alignment-W2V-only.ipynb
@@ -21,8 +21,15 @@
     "\n",
     "import gensim \n",
     "import gensim.downloader as api \n",
-    "from gensim.models import KeyedVectors \n"
+    "from gensim.models import KeyedVectors "
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -41,7 +48,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.6"
+   "version": "3.12.0"
   }
  },
  "nbformat": 4,
