primarily working with w2v only, and all together in .ipynb

--- a/align-embeddings-GPT-BERT-W2V-Mar20.ipynb
+++ b/align-embeddings-GPT-BERT-W2V-Mar20.ipynb
@@ -110,8 +110,7 @@
     "\n",
     "from sklearn.metrics.pairwise import cosine_similarity\n",
     "\n",
-    "import openai\n",
-    "\n"
+    "import openai"
    ]
   },
   {
@@ -174,6 +173,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Consulting the above processed list of filtered words, below gets the embeddings stored in word2vec and then aggregates them... "
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -229,6 +235,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "With averaged embeddings for each utterance from each speaker, just gets alignment scores and returns them... "
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 3,
    "metadata": {},
@@ -251,6 +264,15 @@
     "    similarity = cosine_similarity([vector1_norm], [vector2_norm])\n",
     "    \n",
     "    return similarity[0][0]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Everything above is really done solely for the benefit or use of word2vec\n",
+    "\n",
+    "Below is just for getting the cosines for GPT and BERT. THESE CAN BE IGNORED. "
    ]
   },
   {
@@ -283,6 +305,13 @@
     "    simBERT = cosine_similarity([emb1], [emb2])[0][0]\n",
     "        \n",
     "    return simBERT"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Below just gets all the semantic analyses into one single datasheet... (along with existing lemma and token info)"
    ]
   },
   {
@@ -354,6 +383,13 @@
     "\n",
     "    # return alignment scores\n",
     "    return dictionaries_list"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Below is a clunky way of creating lagged version of each datasheet and sending to get semantic scores (above)"
    ]
   },
   {
@@ -436,6 +472,13 @@
     "\n",
     "    # give us our finished dataframe\n",
     "    return aggregated_df"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Below loops through each datasheet and runs everything above to assemble final data"
    ]
   },
   {
