--- a/alignment-W2V-only.ipynb
+++ b/alignment-W2V-only.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -31,7 +31,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -109,7 +109,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -173,7 +173,7 @@
     "    return df, columns_converted\n",
     "\n",
     "# Function to get lagged conversational turns and restructure dataframe\n",
-    "def process_input_data(df: pd.DataFrame, include_stan: bool = True) -> pd.DataFrame:\n",
+    "def pair_columns_lagged(df: pd.DataFrame, include_stan: bool = True) -> pd.DataFrame:\n",
     "    # Base columns to lag\n",
     "    columns_to_lag = ['content', 'token', 'lemma', 'tagged_token', 'tagged_lemma']\n",
     "    \n",
@@ -189,24 +189,6 @@
     "    \n",
     "    df['utter_order'] = df['participant'] + ' ' + df['participant'].shift(-1)\n",
     "    \n",
-    "    return df\n",
-    "\n",
-    "# Main function to process the file\n",
-    "def process_file(file_path, large_list: list):       \n",
-    "    df = pd.read_csv(file_path, sep='\\t', encoding='utf-8')\n",
-    "    \n",
-    "    # Convert columns with list-like strings to actual lists\n",
-    "    df, columns_converted = convert_columns_to_lists(df)\n",
-    "\n",
-    "    # Filtering based on user-specified requests\n",
-    "    columns_to_filter = ['lemma','token']\n",
-    "    for col in columns_to_filter:\n",
-    "        # First filter: Keep only words in filter_model\n",
-    "        df[col] = df[col].apply(lambda token_list: [word for word in token_list if word in large_list])\n",
-    "    \n",
-    "    # Do the lagging\n",
-    "    df = process_input_data(df)\n",
-    "\n",
     "    return df\n",
     "\n",
     "# Function to compute cosine similarities between embeddings\n",
@@ -243,7 +225,39 @@
     "        sum_embedding = np.sum(embeddings, axis=0)\n",
     "        return sum_embedding\n",
     "    else:\n",
-    "        return None  # Or handle empty embeddings as you see fit\n"
+    "        return None  # Or handle empty embeddings as you see fit\n",
+    "    \n",
+    "# Main function to process the file for adding W2V\n",
+    "def process_file_for_W2V(file_path, vocab_list: list):       \n",
+    "    df = pd.read_csv(file_path, sep='\\t', encoding='utf-8')\n",
+    "    \n",
+    "    # Convert columns with list-like strings to actual lists\n",
+    "    df, columns_converted = convert_columns_to_lists(df)\n",
+    "\n",
+    "    # Filtering based on user-specified requests\n",
+    "    columns_to_filter = ['lemma','token']\n",
+    "    for col in columns_to_filter:\n",
+    "        # First filter: Keep only words in filter_model\n",
+    "        df[col] = df[col].apply(lambda token_list: [word for word in token_list if word in vocab_list])\n",
+    "    \n",
+    "    # Do the lagging and pair\n",
+    "    df = pair_columns_lagged(df)\n",
+    "\n",
+    "    # Create columns of embeddings\n",
+    "    for column in [\"lemma\", \"token\"]:\n",
+    "        df[f\"{column}1_sum_embedding\"] = df[f\"{column}1\"].apply(lambda tokens: get_sum_embeddings(tokens, w2v_google_model))\n",
+    "        df[f\"{column}2_sum_embedding\"] = df[f\"{column}2\"].apply(lambda tokens: get_sum_embeddings(tokens, w2v_google_model))\n",
+    "\n",
+    "    # Columns to compute similarities\n",
+    "    embedding_columns = [\n",
+    "        (\"lemma1_sum_embedding\", \"lemma2_sum_embedding\"),\n",
+    "        (\"token1_sum_embedding\", \"token2_sum_embedding\")\n",
+    "    ] \n",
+    "    \n",
+    "    # Compute cosine similarities\n",
+    "    df = compute_cosine_similarities(df, embedding_columns)\n",
+    "\n",
+    "    return df\n"
    ]
   },
   {
@@ -255,14 +269,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Processing files: 100%|██████████| 2/2 [00:00<00:00, 33.29it/s]\n"
+      "Processing files: 100%|██████████| 2/2 [00:00<00:00, 35.63it/s]\n"
      ]
     }
    ],
@@ -282,27 +296,13 @@
     "concatenated_df = pd.DataFrame()\n",
     "for file_name in tqdm(text_files, desc=\"Processing files\"):\n",
     "    file_path = os.path.join(folder_path, file_name)\n",
-    "    df = process_file(file_path, vocab_filtered)\n",
-    "\n",
-    "    # Create columns of embeddings\n",
-    "    for column in [\"lemma\", \"token\"]:\n",
-    "        df[f\"{column}1_sum_embedding\"] = df[f\"{column}1\"].apply(lambda tokens: get_sum_embeddings(tokens, w2v_google_model))\n",
-    "        df[f\"{column}2_sum_embedding\"] = df[f\"{column}2\"].apply(lambda tokens: get_sum_embeddings(tokens, w2v_google_model))\n",
-    "\n",
-    "    # Columns to compute similarities\n",
-    "    embedding_columns = [\n",
-    "        (\"lemma1_sum_embedding\", \"lemma2_sum_embedding\"),\n",
-    "        (\"token1_sum_embedding\", \"token2_sum_embedding\")\n",
-    "    ]\n",
-    "\n",
-    "    # Compute cosine similarities\n",
-    "    df = compute_cosine_similarities(df, embedding_columns)\n",
+    "    df = process_file_for_W2V(file_path, vocab_filtered)\n",
     "    concatenated_df = pd.concat([concatenated_df, df], ignore_index=True)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -598,13 +598,28 @@
        "[5 rows x 30 columns]"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "concatenated_df.head()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### TO DO\n",
+    "\n",
+    "need to do a better job specifying what is being filtered and have a filtering list for W2V and a filtering list for lexical and syntactic that is unique... \n",
+    "\n",
+    "need to add lexical and syntactic computations of cosine... (process_file_for_lexical_syntactic) but first, set up the above with user-specified choices better integrated... this mostly applies to filtering vocab list and for lag choice\n",
+    "\n",
+    "Maybe for user-specified features (namely lag), can start with the GPT and BERT standa-alone code?\n",
+    "\n",
+    "In fact, might be easier to make modifications with lexical and syntactic first if working with chatGPT\n"
    ]
   }
  ],
