--- a/alignment_W2V-Nick.ipynb
+++ b/alignment_W2V-Nick.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -31,7 +31,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -41,7 +41,8 @@
       "Local cache directory: /Users/nduran4/Desktop/GitProjects/llm-linguistic-alignment/gensim-data\n",
       "Gensim BASE_DIR set to: /Users/nduran4/Desktop/GitProjects/llm-linguistic-alignment/gensim-data\n",
       "Model word2vec-google-news-300 already exists at: /Users/nduran4/Desktop/GitProjects/llm-linguistic-alignment/gensim-data/word2vec-google-news-300\n",
-      "Model glove-twitter-200 already exists at: /Users/nduran4/Desktop/GitProjects/llm-linguistic-alignment/gensim-data/glove-twitter-200\n"
+      "Model glove-twitter-200 already exists at: /Users/nduran4/Desktop/GitProjects/llm-linguistic-alignment/gensim-data/glove-twitter-200\n",
+      "Word2Vec Google News model loaded from local cache successfully.\n"
      ]
     }
    ],
@@ -109,7 +110,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -264,7 +265,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Main Run"
+    "## MAIN RUN"
    ]
   },
   {
