--- a/alignment-merged-LLMs.ipynb
+++ b/alignment-merged-LLMs.ipynb
@@ -55,7 +55,7 @@
         "\n",
         "# For GPT specifically\n",
         "import openai\n",
-        "openai.api_key = \"sk-proj-EwlNmx144nmk6QM0MVmmT3BlbkFJXFjBq1CHzMtELhYkWblh\"\n",
+        "openai.api_key = [ENTER HERE]\n",
         "\n",
         "# For LLAMA specifically\n",
         "import torch\n",
@@ -3877,7 +3877,8 @@
       "provenance": []
     },
     "kernelspec": {
-      "display_name": "Python 3",
+      "display_name": ".venv",
+      "language": "python",
       "name": "python3"
     },
     "language_info": {
