--- a/update-MERGED.ipynb
+++ b/update-MERGED.ipynb
@@ -53,7 +53,7 @@
     "\n",
     "# For GPT specifically\n",
     "import openai\n",
-    "openai.api_key = \"sk-proj-EwlNmx144nmk6QM0MVmmT3BlbkFJXFjBq1CHzMtELhYkWblh\"\n",
+    "openai.api_key = [ENTER HERE]\n",
     "\n",
     "# For LLAMA specifically\n",
     "# Going to skip LLAMA for now\n"
