added the API key as environment variable

--- a/update-MERGED.ipynb
+++ b/update-MERGED.ipynb
@@ -9,12 +9,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "API Key loaded successfully!\n"
+     ]
+    }
+   ],
    "source": [
     "# Get the requirements.txt file\n",
-    "# transformers @ git+https://github.com/zphang/transformers@c3dc391da81e6ed7efce42be06413725943b3920\n"
+    "# add the openAI API key as an environment variable"
    ]
   },
   {
@@ -53,7 +61,9 @@
     "\n",
     "# For GPT specifically\n",
     "import openai\n",
-    "openai.api_key = [ENTER HERE]\n",
+    "# Retrieve the API key from the environment variable\n",
+    "api_key = os.getenv(\"API_KEY\")\n",
+    "openai.api_key = api_key\n",
     "\n",
     "# For LLAMA specifically\n",
     "# Going to skip LLAMA for now\n"
