--- a/alignment-merged-LLMs.ipynb
+++ b/alignment-merged-LLMs.ipynb
@@ -55,7 +55,9 @@
         "\n",
         "# For GPT specifically\n",
         "import openai\n",
-        "openai.api_key = [ENTER HERE]\n",
+        "# Retrieve the API key from the environment variable\n",
+        "api_key = os.getenv(\"API_KEY\")\n",
+        "openai.api_key = api_key\n",
         "\n",
         "# For LLAMA specifically\n",
         "import torch\n",
